[package]
name = "kvs"
version = "0.1.0"
authors = ["jianantian <emile.zhu@hotmail.com>"]
description = "A key-Value Store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false

[dependencies]
clap = {version="2.33.0", features=["yaml"]}
serde = {"version" = "1.0.102", features = ["derive"]}
ron = "0.5.1"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.9"
walkdir = "2.2.7"